--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta7",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-phone-call": "^1.0.9",
     "react-navigation": "^2.18.2",
