--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-phone-call": "^1.0.9",
