--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-phone-call": "^1.0.9",
     "react-native-ratings": "^6.1.0",
