--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-email": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-phone-call": "^1.0.9",
