--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^1.0.0-beta7",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-notifications": "^1.5.0",
     "react-native-phone-call": "^1.0.9",
     "react-native-ratings": "^6.1.0",
     "react-navigation": "^2.18.2",
