--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
+    "react-native-chart-kit": "^3.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-email": "^1.0.2",
