ajuste para producao

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-navigation": "^2.18.2",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-swipeable": "^0.6.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
